[package]
name = "server"
version = "0.1.0"
authors = ["Matt Bell <mappum@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tendermint = { git = "https://github.com/mappum/tendermint-rs", branch = "abci_query" }
ws = "0.9.1"
