[package]
name = "server"
version = "0.1.0"
authors = ["Matt Bell <mappum@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tendermint = { git = "https://github.com/interchainio/tendermint-rs" }
ws = "0.9.1"
bitcoincore-rpc = "0.7.0"
serde_json = "1.0.44"
serde = "1.0.103"
failure = "0.1.6"
rand = "0.7.2"
sha2 = "0.8.0"
